# USD_Example

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
